--- a/index.html
+++ b/index.html
@@ -163,40 +163,40 @@
         <!-- Logo carousel -->
         <div class="logos">
             <div class="logos-slide">
-                <img src="images/logos/hi-res/blue-horizon-lnw.webp" alt="Blue Horizon LNW">
-                <img src="images/logos/hi-res/cnt-associates.png" alt="CNT Associates">
-                <img src="images/logos/hi-res/crazy-thumbs.jpg" alt="Crazy Thumbs">
-                <img src="images/logos/hi-res/eat-club.gif" alt="Eat Club">
-                <img src="images/logos/hi-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy">
-                <img src="images/logos/hi-res/encalife.jpg" alt="encalife">
-                <img src="images/logos/hi-res/esme-learning-solutions.png" alt="Esme Learning Solutions">
-                <img src="images/logos/hi-res/events-meets-world.png" alt="Events Meets World">
-                <img src="images/logos/hi-res/focus-on-learning.png" alt="Focus on Learning">
-                <img src="images/logos/hi-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance">
-                <img src="images/logos/hi-res/future-communities.jpg" alt="Future Communities">
-                <img src="images/logos/hi-res/gll-greenwich-leisure-limited.png" alt="GLL Greenwich Leisure Limited">
-                <img src="images/logos/hi-res/global-banking-school.webp" alt="Global Banking School">
-                <img src="images/logos/hi-res/happily-clappily-ever-laughter.png" alt="Happily Clappily Ever Laughter">
-                <img src="images/logos/hi-res/jenup.png" alt="JenUp">
-                <img src="images/logos/hi-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London">
-                <img src="images/logos/hi-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue">
-                <img src="images/logos/hi-res/lcg-lift-consultancy.svg" alt="LCG Lift Consultancy">
-                <img src="images/logos/hi-res/ld-tiling-contractors.png" alt="LD Tiling Contractors">
-                <img src="images/logos/hi-res/london-borough-of-bexley.png" alt="London Borough of Bexley">
-                <img src="images/logos/hi-res/meitam-london.png" alt="Meitam London">
-                <img src="images/logos/hi-res/nerowireart.jpg" alt="NeroWireArt">
-                <img src="images/logos/hi-res/new-haw-community-centre.jpg" alt="New Haw Community Centre">
-                <img src="images/logos/hi-res/pathways-21.png" alt="Pathways 21">
-                <img src="images/logos/hi-res/swipsearch.png" alt="SwipSearch">
-                <img src="images/logos/hi-res/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">
-                <img src="images/logos/hi-res/the-gdpr-compliance-consultancy.jpg" alt="The GDPR Compliance Consultancy">
-                <img src="images/logos/hi-res/tizane.png" alt="Tizane">
-                <img src="images/logos/hi-res/together-matters.png" alt="Together Matters">
-                <img src="images/logos/hi-res/wan&co.png" alt="Wan&Co">
-                <img src="images/logos/hi-res/wardells-wardrobe.png" alt="Wardell's Wardrobe">
-                <img src="images/logos/hi-res/x-blu.png" alt="x-blu">
-                <img src="images/logos/hi-res/young-fins-swimming.png" alt="Young Fins Swimming">
-                <img src="images/logos/hi-res/yvonne-de-ville.png" alt="Yvonne de Ville">
+                <img src="images/logos/low-res/blue-horizon-lnw.webp" alt="Blue Horizon LNW">
+                <img src="images/logos/low-res/cnt-associates.webp" alt="CNT Associates">
+                <img src="images/logos/low-res/crazy-thumbs.webp" alt="Crazy Thumbs">
+                <img src="images/logos/low-res/eat-club.webp" alt="Eat Club">
+                <img src="images/logos/low-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy">
+                <img src="images/logos/low-res/encalife.webp" alt="encalife">
+                <img src="images/logos/low-res/esme-learning-solutions.webp" alt="Esme Learning Solutions">
+                <img src="images/logos/low-res/events-meets-world.webp" alt="Events Meets World">
+                <img src="images/logos/low-res/focus-on-learning.webp" alt="Focus on Learning">
+                <img src="images/logos/low-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance">
+                <img src="images/logos/low-res/future-communities.webp" alt="Future Communities">
+                <img src="images/logos/low-res/gll-greenwich-leisure-limited.webp" alt="GLL Greenwich Leisure Limited">
+                <img src="images/logos/low-res/global-banking-school.webp" alt="Global Banking School">
+                <img src="images/logos/low-res/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter">
+                <img src="images/logos/low-res/jenup.webp" alt="JenUp">
+                <img src="images/logos/low-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London">
+                <img src="images/logos/low-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue">
+                <img src="images/logos/low-res/lcg-lift-consultancy.svg" alt="LCG Lift Consultancy">
+                <img src="images/logos/low-res/ld-tiling-contractors.webp" alt="LD Tiling Contractors">
+                <img src="images/logos/low-res/london-borough-of-bexley.webp" alt="London Borough of Bexley">
+                <img src="images/logos/low-res/meitam-london.webp" alt="Meitam London">
+                <img src="images/logos/low-res/nerowireart.webp" alt="NeroWireArt">
+                <img src="images/logos/low-res/new-haw-community-centre.webp" alt="New Haw Community Centre">
+                <img src="images/logos/low-res/pathways-21.webp" alt="Pathways 21">
+                <img src="images/logos/low-res/swipsearch.webp" alt="SwipSearch">
+                <img src="images/logos/low-res/the-bamboo-wardrobe.webp" alt="The Bamboo Wardrobe">
+                <img src="images/logos/low-res/the-gdpr-compliance-consultancy.webp" alt="The GDPR Compliance Consultancy">
+                <img src="images/logos/low-res/tizane.webp" alt="Tizane">
+                <img src="images/logos/low-res/together-matters.webp" alt="Together Matters">
+                <img src="images/logos/low-res/wan&co.webp" alt="Wan&Co">
+                <img src="images/logos/low-res/wardells-wardrobe.webp" alt="Wardell's Wardrobe">
+                <img src="images/logos/low-res/x-blu.webp" alt="x-blu">
+                <img src="images/logos/low-res/young-fins-swimming.webp" alt="Young Fins Swimming">
+                <img src="images/logos/low-res/yvonne-de-ville.webp" alt="Yvonne de Ville">
             </div>
         </div>
         <div class="services section">
