--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -205,9 +205,16 @@
                     <li>An SME (0-249 employees)</li>
                 </ul>
 
-                <p>Talking Business will be running for a limited time only. To secure your place, start your application today by clicking Register Now.</p>
+                </div>
+                </div>
 
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd4ShuAr0QU5nx8gdUferjS52L_U1FSwSPeopouOFqxlXI8Q/viewform" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+                <div class="partners section center padding-top padding-bottom grey">
+                    <p><strong>Talking Business will be running for a limited time only. To secure your place, start your application today by clicking Register Now.</strong></p>
+                    <div class="padding-top padding-bottom"><a class="btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd4ShuAr0QU5nx8gdUferjS52L_U1FSwSPeopouOFqxlXI8Q/viewform" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+                </div>
+
+                <div class="main section">
+                <div class="container-1140 padding-top padding-bottom">
 
                 <h2>Web Design Clients in Bexley</h2>
                 <p>Take a look at a selection of businesses whom we have worked with previously:</p>
