--- a/index.html
+++ b/index.html
@@ -143,13 +143,10 @@
         <div class="hero">
             <div class="container-1140">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-12">
                         <h1>Web Design for the Serious Business Owner</h1>
                         <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting small businesses in South East London</h2>
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
-                    </div>
-                    <div class="col-4">
-                        <img src="images/Sybil-Mayard.jpg" alt="Headshot of Sybil Mayard">
                     </div>
                 </div>
             </div>
@@ -478,7 +475,7 @@
             </div>
         </div>
         </div>
-        <div class="partners section center grey">
+        <div class="partners section center">
             <div class="container-1140">
                 <h2>Partners</h2>
                 <hr>
@@ -487,19 +484,19 @@
                         <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/fsb-member-logo-PNG.webp" alt="Visit FSB's website"></a>
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/shopify-partners.png" alt="Shopify Partners logo">
+                        <img src="images/logos/low-res/shopify-partners.webp" alt="Shopify Partners logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/wix.png" alt="Wix logo">
+                        <img src="images/logos/low-res/wix.webp" alt="Wix logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/wordpress.png" alt="WordPress logo">
+                        <img src="images/logos/low-res/wordpress.webp" alt="WordPress logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/cnt-associates.png" alt="CNT Associates logo">
+                        <img src="images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/bigcommerce-logo.jpg" alt="BigCommerce logo">
+                        <img src="images/logos/low-res/bigcommerce.webp" alt="BigCommerce logo">
                     </div>
                 </div>
             </div>
