Homepage logo changes

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Design for Small Businesses | South East London | Sybiltec</title>       
+        <title>Sybiltec: Web Design for Small Businesses | London Kent Surrey</title>       
         <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Design for Small Businesses | South East London | Sybiltec" />
+        <meta property="og:title" content="Sybiltec: Web Design for Small Businesses | London Kent Surrey" />
         <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
@@ -189,9 +189,11 @@
                 <img src="images/logos/low-res/the-gdpr-compliance-consultancy.webp" alt="The GDPR Compliance Consultancy">
                 <img src="images/logos/low-res/tizane.webp" alt="Tizane">
                 <img src="images/logos/low-res/together-matters.webp" alt="Together Matters">
+                <img src="images/logos/low-res/vidcareer.webp" alt="VidCareer">
                 <img src="images/logos/low-res/wan&co.webp" alt="Wan&Co">
                 <img src="images/logos/low-res/wardells-wardrobe.webp" alt="Wardell's Wardrobe">
                 <img src="images/logos/low-res/x-blu.webp" alt="x-blu">
+                <img src="images/logos/low-res/yetis-kitchen.webp" alt="Yeti's Kitchen">
                 <img src="images/logos/low-res/young-fins-swimming.webp" alt="Young Fins Swimming">
                 <img src="images/logos/low-res/yvonne-de-ville.webp" alt="Yvonne de Ville">
             </div>
@@ -430,7 +432,7 @@
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">
                                 <img src="images/white-and-blue-analogue-tachometer-gauge.jpg" 
-                                alt="Bexley Talking Business - Business Support"></a>
+                                alt="White and blue analogue tachometer gauge"></a>
                             <div class="blog-card-text">                    
                                 <h3>8 Ways to Speed Up Your Windows PC</h3>
                                 <p>17 April 2024</p>
@@ -481,22 +483,22 @@
                 <hr>
                 <div class="row">
                     <div class="col-2">
-                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/fsb-member-logo-PNG.webp" alt="Visit FSB's website"></a>
+                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/shopify-partners.webp" alt="Shopify Partners logo">
+                        <img src="images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/wix.webp" alt="Wix logo">
+                        <img src="images/logos/low-res/wix.webp" alt="Wix">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/wordpress.webp" alt="WordPress logo">
+                        <img src="images/logos/low-res/wordpress.webp" alt="WordPress">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates logo">
+                        <img src="images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates Ltd">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/low-res/bigcommerce.webp" alt="BigCommerce logo">
+                        <img src="images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys">
                     </div>
                 </div>
             </div>
