Changes to the footer

--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -353,13 +353,10 @@
                         </p>                      
                     </div>
                 </div>
-
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
-            </div>
-        </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltec | Website designed and developed by <a href="/">Sybiltec</a></p>
+                <span id="year"></span> Sybiltec</p>
+            </div>
         </div>
         <script>
             function myFunction() {
