--- a/index.html
+++ b/index.html
@@ -572,13 +572,10 @@
                         </p>         
                     </div>
                 </div>
-
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
+            <div class="copyright section center"><p>Copyright &copy;           
+                <span id="year"></span> Sybiltec</p>
             </div>
-        </div>
-        <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltec | Website designed and developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
