--- a/clients.html
+++ b/clients.html
@@ -219,46 +219,48 @@
                     </div>
                 </div>
                 
-                <h2 class="padding-top">Other Clients I've Worked With</h2>
-                <div class="portfolio">
-                    <!-- Put logos here -->
-                    <div class="row center" style="padding:0">                        
-                        <div class="col-3" style="padding:0"><img src="images/logos/cnt-associates-2.png" alt="CNT Associates"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/crazy-thumbs.png" alt="Crazy Thumbs"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/eat-club.png" alt="Eat Club"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/emrys-consulting.svg" alt="Emrys Consulting"></div>                       
-                    </div>
-                    <div class="row center" style="padding:0">                                                
-                        <div class="col-3" style="padding:0"><img src="images/logos/encalife.png" alt="Encalife"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/esme-learning.png" alt="Esme Learning"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/events-meets-world.png" alt="Events Meets World"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/future-communities.png" alt="Future Communities"></div>
-                    </div>
-                    <div class="row center" style="padding:0">                                               
-                        <div class="col-3" style="padding:0"><img src="images/logos/the-gdpr-compliance-consultancy.png" alt="The GDPR Compliance Consultancy"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/gll.png" alt="GLL Greenwich Leisure Limited"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/global-banking-school.png" alt="Global Banking School"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/happily-clappily-ever-laughter.png" alt="Happily Clappily Ever Laughter"></div>
-                    </div>
-                    <div class="row center" style="padding:0">                                                
-                        <div class="col-3" style="padding:0"><img src="images/logos/jenup.png" alt="JenUp"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/Kiko-by-Astons-of-London.svg" alt="Kiko by Astons of London"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/krach-institute-for-tech-diplomacy-at-purdue.png" alt="Krach Institute for Tech Diplomacy at Purdue"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/lcg-lift-consultancy.png" alt="LCG Lift Consultancy"></div>                       
-                    </div>
-                    <div class="row center" style="padding:0">                        
-                        <div class="col-3" style="padding:0"><img src="images/logos/ld-tiling-contractors-ltd.png" alt="LD Tiling Contractors Ltd"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/meitam-london.png" alt="Meitam London"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/nerowireart-2.png" alt="NeroWireArt"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/new-haw-community-centre.png" alt="New Haw Community Centre"></div>                       
-                    </div>
-                    <div class="row center" style="padding:0"> 
-                        <div class="col-3" style="padding:0"><img src="images/logos/pathways-21.png" alt="Pathways 21"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/together-matters.png" alt="Together Matters"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/wan-and-co.png" alt="Wan&Co"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/wardells-wardrobe.png" alt="Wardell's Wardrobe"></div>
-                    </div>
+                <h2 class="padding-top">Other Clients We've Worked With</h2>
+                        <!-- Logo carousel -->
+        <div class="logos">
+            <div class="logos-slide">
+                <img src="images/logos/low-res/blue-horizon-lnw.webp" alt="Blue Horizon LNW">
+                <img src="images/logos/low-res/cnt-associates.webp" alt="CNT Associates">
+                <img src="images/logos/low-res/crazy-thumbs.webp" alt="Crazy Thumbs">
+                <img src="images/logos/low-res/eat-club.webp" alt="Eat Club">
+                <img src="images/logos/low-res/emrys-technology-and-consultancy.svg" alt="Emrys Technology & Consultancy">
+                <img src="images/logos/low-res/encalife.webp" alt="encalife">
+                <img src="images/logos/low-res/esme-learning-solutions.webp" alt="Esme Learning Solutions">
+                <img src="images/logos/low-res/events-meets-world.webp" alt="Events Meets World">
+                <img src="images/logos/low-res/focus-on-learning.webp" alt="Focus on Learning">
+                <img src="images/logos/low-res/fortis-data-protection-compliance.svg" alt="Fortis Data Protection Compliance">
+                <img src="images/logos/low-res/future-communities.webp" alt="Future Communities">
+                <img src="images/logos/low-res/gll-greenwich-leisure-limited.webp" alt="GLL Greenwich Leisure Limited">
+                <img src="images/logos/low-res/global-banking-school.webp" alt="Global Banking School">
+                <img src="images/logos/low-res/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter">
+                <img src="images/logos/low-res/jenup.webp" alt="JenUp">
+                <img src="images/logos/low-res/kiko-by-astons-of-london.svg" alt="Kiko by Astons of London">
+                <img src="images/logos/low-res/krach-institute-for-tech-diplomacy-at-purdue.svg" alt="Krack Institute for Tech Diplomacy at Purdue">
+                <img src="images/logos/low-res/lcg-lift-consultancy.svg" alt="LCG Lift Consultancy">
+                <img src="images/logos/low-res/ld-tiling-contractors.webp" alt="LD Tiling Contractors">
+                <img src="images/logos/low-res/london-borough-of-bexley.webp" alt="London Borough of Bexley">
+                <img src="images/logos/low-res/meitam-london.webp" alt="Meitam London">
+                <img src="images/logos/low-res/nerowireart.webp" alt="NeroWireArt">
+                <img src="images/logos/low-res/new-haw-community-centre.webp" alt="New Haw Community Centre">
+                <img src="images/logos/low-res/pathways-21.webp" alt="Pathways 21">
+                <img src="images/logos/low-res/swipsearch.webp" alt="SwipSearch">
+                <img src="images/logos/low-res/the-bamboo-wardrobe.webp" alt="The Bamboo Wardrobe">
+                <img src="images/logos/low-res/the-gdpr-compliance-consultancy.webp" alt="The GDPR Compliance Consultancy">
+                <img src="images/logos/low-res/tizane.webp" alt="Tizane">
+                <img src="images/logos/low-res/together-matters.webp" alt="Together Matters">
+                <img src="images/logos/low-res/vidcareer.webp" alt="VidCareer">
+                <img src="images/logos/low-res/wan&co.webp" alt="Wan&Co">
+                <img src="images/logos/low-res/wardells-wardrobe.webp" alt="Wardell's Wardrobe">
+                <img src="images/logos/low-res/x-blu.webp" alt="x-blu">
+                <img src="images/logos/low-res/yetis-kitchen.webp" alt="Yeti's Kitchen">
+                <img src="images/logos/low-res/young-fins-swimming.webp" alt="Young Fins Swimming">
+                <img src="images/logos/low-res/yvonne-de-ville.webp" alt="Yvonne de Ville">
             </div>
+        </div>
             </div>
         </div>
         <div class="contact section">
@@ -365,6 +367,10 @@
                 }
             }
             document.getElementById("year").innerHTML = new Date().getFullYear();
+        </script>
+        <script>
+            var copy = document.querySelector(".logos-slide").cloneNode(true);
+            document.querySelector(".logos").appendChild(copy);
         </script>
 </body>
 </html>
