Changes to the footer

--- a/guide-to-updating-your-wordpress-website.html
+++ b/guide-to-updating-your-wordpress-website.html
@@ -313,7 +313,7 @@
                 </div>
             </div>
         <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec</p>
+                <span id="year"></span> Sybiltec Web Design</p>
             </div>
         </div>
         <script>
