--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -501,7 +501,7 @@
                 </div>
             </div>
         <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec</p>
+                <span id="year"></span> Sybiltec Web Design</p>
             </div>
         </div>
         <script>
