--- a/blog.html
+++ b/blog.html
@@ -290,7 +290,7 @@
                 </div>
             </div>
         <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec</p>
+                <span id="year"></span> Sybiltec Web Design</p>
             </div>
         </div>
         <script>
