--- a/common-website-mistakes.html
+++ b/common-website-mistakes.html
@@ -308,7 +308,7 @@
                 </div>
             </div>
         <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec</p>
+                <span id="year"></span> Sybiltec Web Design</p>
             </div>
         </div>
         <script>
