--- a/user-experience-ux.html
+++ b/user-experience-ux.html
@@ -342,7 +342,7 @@
                 </div>
             </div>
         <div class="copyright section center"><p>Copyright &copy;           
-                <span id="year"></span> Sybiltec</p>
+                <span id="year"></span> Sybiltec Web Design</p>
             </div>
         </div>
         <script>
