Various SEO improvements

--- a/bexley-talking-business.html
+++ b/bexley-talking-business.html
@@ -48,7 +48,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bexley Talking Business - Business Support | Sybiltec</title>       
         <meta name="Description" content="If you are an SME or sole trader based in Bexley, you may be eligible to receive free business support. Register now for the Talking Business programme.">
-        <meta name="robots" content="all">
+        <meta name="robots" content="noindex">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Bexley Talking Business - Business Support | Sybiltec" />
