--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -28,12 +28,12 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Privacy Notice | Web Designer South East London | Sybiltec</title>       
+        <title>Privacy Notice | Sybiltec Web Design</title>       
         <meta name="Description" content="We take your data privacy concerns seriously and comply with all applicable laws. Read our privacy notice to learn how we collect, use and protect your data.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Privacy Notice | Web Designer South East London | Sybiltec" />
+        <meta property="og:title" content="Privacy Notice | Sybiltec Web Design" />
         <meta property="og:description" content="We take your data privacy concerns seriously and comply with all applicable laws. Read our privacy notice to learn how we collect, use and protect your data." />
         <meta property="og:url" content="https://sybiltec.com/privacy-notice" />
         <meta property="og:site_name" content="Sybiltec" />
