--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides website design services in the South East London areaa. Read my blog posts to keep yourself updated with industry news and company updates.">
-        <meta name="robots" content="all">
+        <meta name="robots" content="noindex">
         <link rel="canonical" href="https://sybiltec.com/blog">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
@@ -153,10 +153,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>9 Ways to Improve the UX (User Experience) of Your Website</h2>
+                <h2>8 Ways to Speed Up Your Windows PC</h2>
+                    <p>It can be frustrating to deal with a slow computer. But if you're tempted to throw it away, first consider these 8 things you can try in order to speed it up! …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">Speed Up My PC</a>
+                <div class="padding-top">
+                    <h2>9 Ways to Improve the UX (User Experience) of Your Website</h2>
                     <p>User experience (or UX) is all about how your website visitors feel when they are browsing your website. Is it a positive or negative experience? Do they feel happy and satisfied, or angry and frustrated? Read the article for 8 ways to improve your website's user experience. …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/user-experience-ux">Improve My UX</a>
+                </div>
                 <div class="padding-top">
                     <h2>Accessible Design: Creating an Inclusive Website</h2>
                     <p>Designing an accessible website means creating web content that's usable for all types of users, including those with impairments and disabilities. Read the article for simple tips on how to make your website more accessible …</p>
@@ -170,22 +176,10 @@
                     <a class="btn-primary" href="https://sybiltec.com/google-search-console">Use Google Search Console</a>
                 </div>
                 <div class="padding-top">
-                    <h2>Free Webinar: Building an Online Store Using Shopify</h2>
-                    <p>If you are a business owner looking to sell products or services online, you will need an online store. In this free webinar, delivered in association with CNT Associates, we will cover how to develop a store with one of the most popular e-commerce platforms - Shopify …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/building-online-store-using-shopify">Register Now</a>
-                </div>
-                <div class="padding-top">
                     <h2>10 Best Free WordPress Plugins</h2>
                     <p>WordPress is one of the most popular website builder platforms on the internet. One reason why is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/best-free-wordpress-plugins">Best WordPress Plugins</a>
-                </div>
-                <div class="padding-top">
-                    <h2>Free Webinar: Developing a Digital Marketing Strategy</h2>
-                    <p>Do you want to learn about digital marketing methods and develop an effective strategy? Join our FREE webinar on Wednesday 31st January 2024 at 11am to gain awareness of the different marketing methods available to you and how you can utilise them effectively. …</p>
-                    <br>
-                    <a class="btn-primary" href="https://sybiltec.com/digital-marketing-strategy">Register Now</a>
                 </div>
                 <div class="padding-top">
                     <h2>10 Common Website Mistakes and How to Avoid Them</h2>
