--- a/sitemap.html
+++ b/sitemap.html
@@ -28,12 +28,12 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sitemap | South East London Web Design | Sybiltec</title>       
+        <title>Sitemap | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sitemap | South East London Web Design | Sybiltec" />
+        <meta property="og:title" content="Sitemap | Sybiltec Web Design" />
         <meta property="og:description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website." />
         <meta property="og:url" content="https://sybiltec.com/sitemap" />
         <meta property="og:site_name" content="Sybiltec" />
@@ -192,8 +192,6 @@
                     <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Are You Inadvertently Abusing Your Customers' Data?</a></li>
                     <li><a href="https://sybiltec.com/bexley-talking-business">Bexley Talking Business</a></li>
                     <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Best Practices for You and Your Business</a></li>
-                    <li><a href="https://sybiltec.com/building-online-store-using-shopify">Free Webinar: Building an Online Store Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/digital-marketing-strategy">Free Webinar: Developing a Digital Marketing Strategy</a></li>
                     <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">How Does a Good Website Showcase Trust?</a></li>
                     <li><a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></li>
                     <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">How to Backup Your WordPress Website with UpdraftPlus</a></li>
