--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -22,20 +22,20 @@
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Website Maintenance"
+                "name": "Website Maintenance Services in London"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Maintenance | Erith Bexley South East London | Sybiltec</title>       
-        <meta name="Description" content="Your website isn't static, it should be constantly evolving as your business grows. If you need support with maintaining your website, purchase a package today.">
+        <title>Website Maintenance Services in London | Sybiltec</title>       
+        <meta name="Description" content="Your website should be constantly adapting and evolving as your business grows. Looking for website maintenance services in London? Purchase a package today.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-maintenance">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Maintenance | Erith Bexley South East London | Sybiltec" />
-        <meta property="og:description" content="Your website isn't static, it should be constantly evolving as your business grows. If you need support with maintaining your website, purchase a package today." />
+        <meta property="og:title" content="Website Maintenance Services in London | Sybiltec" />
+        <meta property="og:description" content="Your website should be constantly adapting and evolving as your business grows. Looking for website maintenance services in London? Purchase a package today." />
         <meta property="og:url" content="https://sybiltec.com/website-maintenance" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -147,29 +147,29 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Website Maintenance</h1>
+                <h1>Website Maintenance Services in London</h1>
                 <h2>For when you need ongoing support</h2>
             </div>
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
                 <h2>Why Do You Need to Maintain Your Website?</h2>
-                <p>Your website isn't just a static component of your business. It should be constantly evolving as your business grows. Therefore, updates should be made on a regular basis. For instance, you may be running an e-commerce store where stock is frequently changing, so your website needs to reflect the products that are being added to or removed from your inventory. Or, you may be focused on creating new content for your website, such as blog posts, which need to be uploaded as you write them. In any case, as a business owner you already have a million things to take care of, so how will you find the time to manage your website? That's where my website maintenance service can help!</p>
+                <p>Your website isn't just a static component of your business. It should be constantly evolving as your business grows. Therefore, updates should be made on a regular basis. For instance, you may be running an e-commerce store where stock is frequently changing, so your website needs to reflect the products that are being added to or removed from your inventory. Or, you may be focused on creating new content for your website, such as blog posts, which need to be uploaded as you write them. In any case, as a business owner you already have a million things to take care of, so how will you find the time to manage your website? That's where our <strong>website maintenance service in London</strong> can help.</p>
                 <h2>The Service</h2>
-                <p>If you need support with running your website, I can provide a regular service for a low monthly cost. This service includes but is not limited to:</p>
+                <p>If you need support with running your website, we can provide a regular service for a low monthly cost. This service includes but is not limited to:</p>
                 <h3>Adding/publishing new pages and blog posts</h3>
-                <p>Please provide me with the text you wish to be added in a Word document. If you can include the images too, that would be really helpful, however, I can source the images if you are finding this difficult. Don't worry about the layout, as I will create a design for the page that is consistent with the rest of your website. I'll proofread your content too!</p>
+                <p>Please provide us with the text you wish to be added in a Word document. If you can include the images too, that would be really helpful, however, we can source the images if you are finding this difficult. Don't worry about the layout, as we will create a design for the page that is consistent with the rest of your website. We'll proofread your content too.</p>
                 <h3>Installing/updating apps and plugins</h3>
-                <p>For all platforms (Shopify, WordPress and Wix), I'll help you with installing and configuring any apps that you require.</p>
-                <p>In particular, if you own a WordPress site, you're probably aware that the plugins, themes and WordPress files must be kept updated. I can perform monthly backups and updates for you. Please read my blog posts for information on the processes I use for <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">backing up</a> and <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">updating</a> a WordPress website.</p>
+                <p>For all platforms (Shopify, WordPress and Wix), we'll help you with installing and configuring any apps that you require.</p>
+                <p>In particular, if you own a WordPress site, you're probably aware that the plugins, themes and WordPress files must be kept updated. We can perform monthly backups and updates for you. Please read our blog posts for information on the processes we use for <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">backing up</a> and <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">updating</a> a WordPress website.</p>
                 <h3>Theme customisations</h3>
-                <p>If you need to make some adjustments to your theme which may require changes to the code, I can make the edits for you (applicable to Shopify and WordPress websites).</p>
+                <p>If you need to make some adjustments to your theme which may require changes to the code, we can make the edits for you (applicable to Shopify and WordPress websites).</p>
                 <h3>Maintaining your e-commerce store</h3>
-                <p>This service is perfect for you if you own an e-commerce store and you need help with managing it. As per your requests, I will add product images and descriptions, update shipping charges, and remove products that you are no longer selling. I'll also create discount codes.</p>
+                <p>This service is perfect for you if you own an e-commerce store and you need help with managing it. As per your requests, we will add product images and descriptions, update shipping charges, and remove products that you are no longer selling. We'll also create discount codes.</p>
                 <h3>SEO (search engine optimisation) tasks</h3>
-                <p>I will make some basic SEO improvements to your website, including page titles, meta descriptions and alt text, and I will monitor the performance of your website in Google Search Console. All techniques used comply with Google Search Essentials.</p>
+                <p>We will make some basic SEO improvements to your website, including page titles, meta descriptions and alt text, and we will monitor the performance of your website in Google Search Console. All techniques used comply with Google Search Essentials.</p>
             <h2>Choose Your Package</h2>
-            <p>If you are a business owner based in <strong>London</strong> or the surrounding areas, choose the <strong>website maintenance</strong> package below which closely matches your requirements. However, if none these are appropriate, please <a href="https://sybiltec.com/contact">contact me</a> and I will create a customised package for you.</p>
+            <p>If you are a business owner based in <strong>London</strong> or the surrounding areas, choose the <strong>website maintenance</strong> package below which closely matches your requirements. However, if none these are appropriate, please <a href="https://sybiltec.com/contact">contact us</a> and we will create a customised package for you.</p>
             <div class="row">
                 <div class="col-4">
                     <div class="blog-card">       
