Update Web Design Bexley

--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -233,7 +233,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View LD Tiling Contractors</a>
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Happily Clappily</a>
                             </div>
                         </div>
                     </div>
@@ -275,7 +275,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://pathways21.com" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Pathways 21</a>
                             </div>
                         </div>
                     </div>
@@ -299,7 +299,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.cntassociates.com/"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View CNT Associates</a>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                             </ul>              
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://bluehorizonlnw.com/"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Blue Horizon LNW</a>
                             </div>
                         </div>
                     </div>
@@ -345,7 +345,7 @@
                             </ul>   
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://future-communities.org.uk"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Future Communities</a>
                             </div>
                         </div>
                     </div>
@@ -367,7 +367,7 @@
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Wardell's Wardrobe</a>
                             </div>
                         </div>
                     </div>
