--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -110,7 +110,7 @@
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/terms-and-conditions" />
+        <link rel="canonical" href="https://sybiltec.com/privacy-notice" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
