--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "image": "https://sybiltec.com/images/logos/sybiltec-logo-social.png",
-        "name": "Sybiltec",
+        "name": "Sybiltec Web Design",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
@@ -95,7 +95,7 @@
         "url": "https://www.sybiltec.com",
         "sameAs": ["https://www.instagram.com/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/"],
         "logo": "https://sybiltec.com/favicon.png",
-        "name": "Sybiltec",
+        "name": "Sybiltec Web Design",
         "description": "Sybiltec provides web design services to small businesses in the South East London region and surrounding areas. Whether you are looking to build your first website or redesign an existing one, we offer a service that's right for you. Services include: small business websites, e-commerce websites and online learning platforms. We work with Shopify, WordPress, Wix, WooCommerce and LearnDash.",
         "email": "info@sybiltec.com",
         "telephone": "+447768059730",
@@ -122,7 +122,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec Web Design"></a>
                             </div>
                         </div>
                         <div class="col-10">
