Fix non-descriptive anchor text in int. outlinks

--- a/improve-website-seo.html
+++ b/improve-website-seo.html
@@ -278,8 +278,8 @@
 
                 <p>Consider these two examples of anchor text:</p>
                 <ol>
-                    <li>If you need help with web design, <a href="https://sybiltec.com/contact">click here</a> to contact me.</li>
-                    <li>If you need help with web design, <a href="https://sybiltec.com/contact">contact me</a> today.</li>
+                    <li>If you need help with web design, <u>click here</u> to contact me.</li>
+                    <li>If you need help with web design, <u>contact me</u> today.</li>
                 </ol>
 
                 <p>The second example is much better from both an SEO and user perspective, as the "contact me" anchor text tells me (and search engines) that it links to a Contact page.</p>
