--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -153,7 +153,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltec ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
+                <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltec Web Design ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
 
                 <p>They are based on a set written by Net Lawman and released under licence. They protect your rights as well as ours.</p>
 
@@ -205,7 +205,7 @@
                     4.2. All implied conditions, warranties and terms are excluded from this agreement. If in any jurisdiction an implied condition, warrant or term cannot be excluded, then this sub paragraph shall be deemed to be reduced in effect, only to the extent necessary to release that specific condition, warranty or term.<br>
                     4.3. You are advised that Content may include technical inaccuracies or typographical errors. This is inevitable in any large website. We would be grateful if you bring to our immediate attention, any that you find.<br>
                     4.4. Our Website contains links to other internet websites. We have neither power nor control over any such website. You acknowledge and agree that we shall not be liable in any way for the Content of any such linked website, nor for any loss or damage arising from your use of any such website or from your buying services or goods via such a website.<br>
-                    4.5. The Sybil Mayard trading as Sybiltec Website and Sybil Mayard trading as Sybiltec Services are provided "as is". We make no representation or warranty that Our Website will be:<br>
+                    4.5. The Sybil Mayard trading as Sybiltec Web Design Website and Sybil Mayard trading as Sybiltec Web Design Services are provided "as is". We make no representation or warranty that Our Website will be:<br>
                     4.5.1 useful to you;<br>
                     4.5.2 of satisfactory quality;<br>
                     4.5.3 fit for a particular purpose;<br>
@@ -220,7 +220,7 @@
 
                 <h2>5. Miscellaneous matters</h2>
                 <p>
-                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is located <a href="https://sybiltec.com/privacy-notice">here</a>.<br>
+                    5.1. Our <a href="https://sybiltec.com/privacy-notice">privacy notice</a> is strong and precise. It complies fully with the Data Protection Act 2018.<br>
                     5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
                     5.3. No failure or delay by any party to exercise any right, power or remedy will operate as a waiver of it nor indicate any intention to reduce that or any other right in the future.<br>
                     5.4. Any communication to be served on either party by the other shall be delivered by hand or sent by first class post or by e-mail.<br>
