Fix unsafe cross-origin links

--- a/about.html
+++ b/about.html
@@ -170,12 +170,12 @@
                     <li>Junior Analyst at Capacitas</li>
                 </ul>
 
-                <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects" rel="noopener noreferrer">Projects</a> page.</p>
+                <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects">Projects</a> page.</p>
 
                 <p>Click the button below to find out how I can help take your business to the next level.</p>
                 
                 <div class="padding-top padding-bottom">
-                    <a href="https://sybiltec.com/contact" target="_blank" class="btn-primary">Contact me</a>
+                    <a href="https://sybiltec.com/contact" class="btn-primary">Contact me</a>
                 </div>
 
                 <div class="center">
@@ -230,7 +230,7 @@
                         </div>
                         <div class="col-3">
                             <h4>Yoast SEO Academy: SEO for Beginners Certified</h4>
-                            <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" target="_blank"><img src="https://academy.yoast.com/badge/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" width="200" alt="Sybil Mayard successfully completed the SEO for beginners course!"/></a>
+                            <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" target="_blank" rel="noopener noreferrer"><img src="https://academy.yoast.com/badge/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" width="200" alt="Sybil Mayard successfully completed the SEO for beginners course!"/></a>
                         </div>
                         <div class="col-3">
                             <h4>The Fundamentals of Digital Marketing</h4>
