--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
             }
         </script>
 
-        <div class="tr-widget" data-id="4604" data-view="badge_inner" data-lang=""><a href="https://trust.reviews/" class="trcr" target="_blank">Powered by <span>Trust.Reviews</span></a></div><script type="text/javascript" src="https://cdn.trust.reviews/widget/embed.min.js" defer></script>
+        <div class="tr-widget" data-id="4604" data-view="badge_inner" data-lang=""><a href="https://trust.reviews/" class="trcr" target="_blank" rel="noopener noreferrer">Powered by <span>Trust.Reviews</span></a></div><script type="text/javascript" src="https://cdn.trust.reviews/widget/embed.min.js" defer></script>
 
         <script>
             var copy = document.querySelector(".logos-slide").cloneNode(true);
