--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -182,7 +182,7 @@
                             </ul>
                             <h4>£50.00 per month</h4>
                             <div class="padding-bottom padding-top">
-                                <a class="btn-primary" href="https://buy.stripe.com/5kA4go3cA1wtaB29AB" target="_blank">Buy Now</a>   
+                                <a class="btn-primary" href="https://buy.stripe.com/5kA4go3cA1wtaB29AB" target="_blank" rel="noopener noreferrer">Buy Now</a>   
                             </div>
                         </div>
                     </div> 
@@ -198,7 +198,7 @@
                             </ul>
                             <h4>£90.00 per month</h4>
                             <div class="padding-bottom padding-top">
-                                <a class="btn-primary" href="https://buy.stripe.com/aEU28g14scb77oQdQW" target="_blank">Buy Now</a>   
+                                <a class="btn-primary" href="https://buy.stripe.com/aEU28g14scb77oQdQW" target="_blank" rel="noopener noreferrer">Buy Now</a>   
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                             </ul>
                             <h4>£175.00 per month</h4>
                             <div class="padding-bottom padding-top">
-                                <a class="btn-primary" href="https://buy.stripe.com/5kA3ck14s7URaB24gl" target="_blank">Buy Now</a>   
+                                <a class="btn-primary" href="https://buy.stripe.com/5kA3ck14s7URaB24gl" target="_blank" rel="noopener noreferrer">Buy Now</a>   
                             </div>
                         </div>
                     </div>
